[package]
name = "secret-cosmwasm-math-compat"
version = "0.1.0"
edition = "2018"

[dependencies]
cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
uint = "=0.9.1"
